infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stockmarket
  labels:
    name: stockmarket
    app.kubernetes.io/part-of: stockmarket
